--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-View Proof of Concept Tool (Randomized)</title>
+    <meta name="description" content="Our multi view browser allows you to open multiple tabs in a one Mobile/Phone/Computer/PC/Tablet layout for efficient multitasking and free YT 4000 watch time and views . Enhance your productivity today!">
+    <meta name="keywords" content="multi view browser,free yt 4000 watch time,free views, free traffic for websites,free multi view browser fo yt, split screen browser, multitasking tool, browser extension, productivity app"> 
+    <link rel="icon" type="image/jpeg/png" href="logomvb">
+    <title>Multi-View Browser</title>
     <style>
         :root {
             --bg-color: #1a1a1a;
@@ -105,7 +108,7 @@
 </head>
 <body>
 
-    <h2 style="margin-top: 0;">Multi-View Proof of Concept Tool (Randomized)</h2>
+    <h2 style="margin-top: 0;">Multi-View Browser</h2>
 
     <div class="controls">
         <label>URL:</label>
