Add button for Multi-View Browser for YT views

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <body>
 
     <h2 style="margin-top: 0;">Multi-View Browser</h2>
-
+<a href="yt-views.html"><button class="btn-stop">Click here for Multi-View Browser for YT views</button></a>
     <div class="controls">
         <label>URL:</label>
         <input type="text" id="targetUrl" placeholder="https://example.com (iframe allowed)" value="">
