--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Our multi view browser allows you to open multiple tabs in a one Mobile/Phone/Computer/PC/Tablet layout for efficient multitasking and free YT 4000 watch time and views . Enhance your productivity today!">
     <meta name="keywords" content="multi view browser,free yt 4000 watch time,free views, free traffic for websites,free multi view browser fo yt, split screen browser, multitasking tool, browser extension, productivity app"> 
-    <link rel="icon" type="image/jpeg/png" href="logomvb.png">
+    <link rel="icon" type="image/jpeg/png" href="logomvbn.png">
     <title>Multi-View Browser</title>
     <style>
         :root {
