--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Our multi view browser allows you to open multiple tabs in a one Mobile/Phone/Computer/PC/Tablet layout for efficient multitasking and free YT 4000 watch time and views . Enhance your productivity today!">
-    <meta name="keywords" content="multi view browser,free yt 4000 watch time,free views, free traffic for websites,free multi view browser fo yt, split screen browser, multitasking tool, browser extension, productivity app"> 
+    <meta name="keywords" content="multi view browser,multi view browser 1000 tabs online,free 1000 tabs online,free yt 4000 watch time,free views, free traffic for websites,free multi view browser fo yt, split screen browser, multitasking tool, browser extension, productivity app"> 
     <link rel="icon" type="image/jpeg/png" href="logomvbn.png">
     <title>Multi-View Browser</title>
     <style>
@@ -108,7 +108,7 @@
 </head>
 <body>
 
-    <h2 style="margin-top: 0;">Multi-View Browser</h2>
+    <h2 style="margin-top: 0;">Multi-View Browser - <h3>maximum 1000 tabs</h3></h2>
 <a href="yt-views.html"><button class="btn-stop">Click here for Multi-View Browser for YT views</button></a>
     <div class="controls">
         <label>URL:</label>
@@ -152,7 +152,7 @@
 
             if (!url) { alert("Please enter a valid URL."); return; }
             if (minTime >= maxTime) { alert("Min Refresh must be less than Max Refresh."); return; }
-            if (count > 100) { alert("Warning: Max 30 tabs recommended to prevent crashing."); }
+            if (count > 100) { alert("Warning: Max 100 tabs recommended to prevent crashing."); }
 
             status.innerText = `Status: Running ${count} views (Refresh: ${minTime}-${maxTime}s)...`;
 
