--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="description" content="Our multi view browser allows you to open multiple tabs in a one Mobile/Phone/Computer/PC/Tablet layout for efficient multitasking and free YT 4000 watch time and views . Enhance your productivity today!">
     <meta name="keywords" content="multi view browser,multi view browser 1000 tabs online,free 1000 tabs online,free yt 4000 watch time,free views, free traffic for websites,free multi view browser fo yt, split screen browser, multitasking tool, browser extension, productivity app"> 
     <link rel="icon" type="image/jpeg/png" href="logomvbn.png">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N7HZ8729BX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N7HZ8729BX');
+</script>
     <title>Multi-View Browser</title>
     <style>
         :root {
