--- a/yt-views.html
+++ b/yt-views.html
@@ -6,6 +6,15 @@
   <meta name="description" content="Watch multiple YouTube videos synchronized instantly in a single, responsive grid. Play, pause, and seek all videos simultaneously for perfect comparison and group viewing.">
   <meta name="keywords" content="viewsync clone, sync multiple youtube videos, watch multiple videos simultaneously, synchronized video player, multi view video player, multiple video sync, youtube video sync tool, sync videos, watch videos together, multi streamer view, multi-view streaming, compare videos side by side, side-by-side video sync, video comparison tool, multi-window player, group watch videos, youtube sync tool, video party sync, multi stream viewer, parallel video playback, live stream sync, group viewing experience, video synchronization online, responsive video grid, sync playback, frame by frame comparison, sync video timeline, watch party tool, video playlist sync, multi-platform video sync, real-time video sync, video sync utility, browser video sync, view sync alternative, same time video player, 2 video sync, 4 video sync, 6 video sync, 10 video sync, 30 video grid, custom video grid, video synchronization website, multi angle video viewer, sync youtube clips, video time sync, exact sync video, dual video player, triple video viewer, quad video player, video review tool, compare live streams, synchronized streaming, free video sync tool, best multi video viewer, online video syncer, multi-channel view, concurrent video playback, seamless video sync, synchronized group video, video sync for events, training video sync, video analysis tool, multi-feed viewer, synchronized learning, simultaneous play, multi screen youtube, video time shift, video offset sync, video delay sync, compare gameplay videos, compare sports videos, synchronized music videos, video study tool, youtube iframe sync, iframe player api sync, video grid view, custom multi viewer, online video wall, responsive video sync, quick video sync, easy video comparison, stream sync app, multi player video, watch videos in sync, browser sync player, video layout organizer, all-in-one video viewer, video playback control, advanced video sync, side by side streaming, multi-stream layout, video grid layout, video player clone, customizable video player, multi media player, dynamic video player, video url sync">
   <link rel="icon" type="image/jpeg/png" href="logomvbn.png">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N7HZ8729BX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N7HZ8729BX');
+</script>
     <title>Free Multi-View Browser for Youtube Videos</title>
     
    <style>
